certificate/middleware-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  name: https-redirectscheme
spec:
  redirectScheme:
    permanent: true
    scheme: https
---

apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx
spec:
  entryPoints:
    - web
  routes:
    - match: Host(`rama-sweets.freeboxos.fr`)
      kind: Rule
      services:
        - name: nginx
          port: 80
      middlewares:
        - name: https-redirectscheme
