certificate/secure-ingress.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: nginx-secure
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`rama-sweets.freeboxos.fr`)
      kind: Rule
      services:
        - name: nginx
          port: 80
  tls:
    secretName: cert
